data/test/regression/type_check/fail/parameter_2.v
genvar i;
localparam p = i;
